added new members and updated event data

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/images/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<base href="" target="_blank" />
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Techtatva 2022: Start making sense" />
+		<title>Techtatva</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/images/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<base href="" target="_blank">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Techtatva: innovation 2022" />
-	<title>Techtatva</title>
-</head>
-
-<body>
-	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
-</body>
-
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
